--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,10 @@ body{
 	background-color: #cccccc;
 }
 
-h2,h4{
+h1,h4{
 	text-align:center;
-/* 	padding:5px; */
+	padding:0px;
+/* 	margin:0px; */
 }
 
 .player_one{
@@ -13,10 +14,9 @@ h2,h4{
 	height:180px;
 	border:1px solid black;
 	border-radius:10px;
-	padding-left:10px;
 }
 
-a{
+  ul, a{
 	text-decoration:none;
 	line-height:10px;
 	color:black;
